ultimo cominc taller

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,6 +2,9 @@
         <head>
             <title>gananciastotales</title>
         </head>
+        <style>
+        
+        </style>
         <body>
                <div>
                    <h1><a href="">Trabaja desde casa</a></h1>
